# asr-middleware

./: .env.example  .gitignore  CI-CD-SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX.md  GEMINI_PRICING_ANALYSIS.md  QUICKSTART.md  README.md  SRS_Document.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  vercel.json
backend/app/alembic/: env.py
backend/app/alembic/versions/: 115c4d2fc7cd_add_audiotranscription_model.py  39261d3dca6b_analysis_field_make_null.py  5a5954f6012f_refactor_translation_to_audiotranslation.py  9f4f6d2a3b10_add_processingjob_model.py  aa66345f6026_full_name_account_activity_added.py  adc360462d50_markdown_generation_made_true.py  b5d2b5c5171d_added_user_link_to_related_models.py  c630c37d3aa8_default_value_edit_deprecated.py  e89006206c19_add_translation_model.py  f743a631c589_add_meetinganalysis_model.py
backend/app/api/: db.py  main.py  models.py
backend/app/api/v1/: deps.py
backend/app/api/v1/internal/: admin.py
backend/app/api/v1/routers/: audios.py  auth.py  translations.py  utils.py
backend/app/worker/: celery_app.py  tasks.py
backend/nginx/: README.md  nginx.conf
backend/nginx/conf.d/: default.conf  default.conf.https-template
backend/nginx/ssl/: .gitkeep
docs/: AUDIO_RECORDING_FIX.md  CI-CD-QUICKREF.md  DEPLOYMENT.md  HTTPS_QUICKSTART.md  QUICKSTART.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  (+4 more)
(+43 files in other folders)
